2002/05/30 niteria
- Fixed Bug 555447: TeX-Output: Fails for names over 2 lines
- Very small corrections to CPathTool and CCrystalTextView.

2002/05/24 niteria
- Blocking of StructureParser fixed NOW.

2002/05/20 niteria
- Feature 558433 implemented: InsertGraphics with scaling to textwidth.

2002/05/17 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified.
  The insert picture dialog uses this default path also.

2002/05/10 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified.
  If a project is opened, the project path will be used.
  If a file is opened, the file path will be used.

2002/05/08 niteria
- Fixed Bug 553800: Splash-Screen hides other windows.
- Added directory "TeXTest" with files to test TXC with.
  Their main purpose is to reproduce several bugs or behaviours coming
  up from missing features. You are invited to contribute to this section!

2002/05/03 christianwelzel
- Feature 539142: Configurable Default Path for Documents modified
  If this path is empty, the default personal directory will be used
- Configurable Project Path removed

2002/05/01 cnorris
- Much improved structure parser blocking
- Made spell checker dictionary format more tolerant
- Fixed crash when dictionaries don't exist
- Improved the spell checker dialog's handling of spell checker error
- Configurable setlocale to fix several problems releated to special characters like accents and umulets.

2002/05/01 niteria
- Fixed Bug 551125: %rm and %rc not recognized by AfxExpandPlaceholder
- Better handling of invalid patterns for "Clean Project".
- New MenuButton, which is able to display dialogs as well.
  Corresponding Dialog for defining placeholders for single files.
  Based on this, I could simplify the menus for the placeholders very much.
- New layout for Options->Spelling.
- Added external support for placeholders for sets of files.
- Speeded up the TeX-output-filter and fixed a small catching problem.
