@@ -7,60 +7,60 @@
 
 <h2>Placeholders for sets of files</h2>
 
-<p>Allows the following syntax:</p>
+<p>Placeholders for sets of files are used to deal with more than one file at a time. The following syntax is allowed for them:</p>
 
 <p><b>$[q][s][f][r]&lt;FILESET&gt;</b></p>
 
 <dl>
   <dt>$</dt>
-  <dd>Starts the Placeholder. Use "$$" to get "$".</dd>
+  <dd>Starts the placeholder. Use "$$" to get "$".</dd>
 
   <dt>q</dt>
-  <dd>Filenames will be quoted using ".</dd><br>
+  <dd>All filenames will be separatly quoted using ".</dd><br>
 
   <dt>s</dt>
-  <dd>Filenames in 8.3-format.</dd><br>
+  <dd>All filenames will be issued in 8.3-format.</dd><br>
 
   <dt>f</dt>
-  <dd>Forward Slash '/' is used as Directory Separator.</dd><br>
+  <dd>The forward slash '/' is used as directory separator.</dd><br>
 
   <dt>r</dt>
-  <dd>Filenames will be given relative to the WorkingDir of the Project.</dd>
+  <dd>The filenames will be given relative to the working directory of the project.</dd>
 
   <dt>&lt;FILESET&gt;</dt>
   <dd>One of the following:
 
   <dl>
     <dt>TPF</dt>
-    <dd>All TeX-Files of the Project.</dd>
+    <dd>All TeX-files of the project.</dd>
 
     <dt>BPF</dt>
-    <dd>All BibTeX-Files of the Project.</dd>
+    <dd>All BibTeX-files of the project.</dd>
 
     <dt>GPF</dt>
-    <dd>All Graphic-Files of the Project.</dd>
+    <dd>All Graphic-files of the project.</dd>
 
     <dt>TXC</dt>
-    <dd>All Files generated by TXC regarding the Project. Currently only the .tcp and .tps files.</dd>
+    <dd>All files generated by TeXnicCenter regarding the project. Currently only the .tcp and .tps files.</dd>
 
     <dt>COF</dt>
-    <dd>All currently opened Files in the Editor.</dd>
+    <dd>All currently opened files in the editor.</dd>
 
     <dt>APF</dt>
-    <dd>All Project Files. This is the sum of <b>TPF</b>, <b>BPF</b>, <b>GPF</b> and <b>TXC</b>.
+    <dd>All project files. This is the sum of <b>TPF</b>, <b>BPF</b>, <b>GPF</b> and <b>TXC</b>.
 
     <dt>AFS</dt>
-    <dd>All above Filesets together. This is the sum of <b>TPF</b>, <b>BPF</b>, <b>GPF</b>, <b>TXC</b> and <b>COF</b>.
+    <dd>All above filesets together. This is the sum of <b>TPF</b>, <b>BPF</b>, <b>GPF</b>, <b>TXC</b> and <b>COF</b>.
   </dl>
   </dd>
 </dl>
 
 
-<h4>Examples:</h4>
+<h3>Examples:</h3>
 
 <dl>
   <dt>$qTPF</dt>
-  <dd>Lists all TeX-Files reported by TXC-StructureParser.
+  <dd>Lists all (La)TeX-files reported by the structure parser of TeXnicCenter.
       Each quoted and separated from each other using a space,
       like<br>
       <br>
@@ -71,9 +71,9 @@
       </dd>
 
   <dt>$fBPF</dt>
-  <dd>Lists all BibTeX-Files reported by TXC-StructureParser.
-      The Forward Slash is used as directory separator.
-      The Files themselves are separated from each other using a space,
+  <dd>Lists all BibTeX-files reported by the structure parser of TeXnicCenter.
+      The forward slash is used as directory separator.
+      The files themselves are separated from each other using a space,
       like<br>
       <br>
       <var>D:/Temp/test/xbib.bib D:/Temp/test/morebibs/morexbib.bib</var><br>
@@ -82,8 +82,8 @@
       </dd>
 
   <dt>$COF</dt>
-  <dd>Lists all Files opened in the editor.
-      Separated from each other using a space (notice the problem with non-quoting of "Program Files"),
+  <dd>Lists all files, which are currently opened in the editor.
+      They are separated from each other using a space (notice the problem with non-quoting of "Program Files"),
       like<br>
       <br>
       <var>D:\Temp\test\curvature3d.tex D:\Program Files\texmf\pdftex\latex\config\pdflatex.ini</var><br>
@@ -92,9 +92,10 @@
       </dd>
 
   <dt>$qsrAPF</dt>
-  <dd>Lists all Files contained in the Project (as reported by TXC-StructureParser).
-      Each quoted, Filenames in 8.3-Format and relative to the WorkingDir and separated
-      from each other using a space, like<br>
+  <dd>Lists all files contained in the project
+      (as reported by the structure parser of TeXnicCenter).
+      Each quoted, filenames in 8.3-format and relative to the
+      working directory and separated from each other using a space, like<br>
       <br>
       <var>"curvat~1.tcp" "curvat~1.tps" "curvat~1.tex" "xbib.bib" "morebibs\morexb~1.bib" "defini~1\macros.tex" "chapte~1.tex"</var><br>
       <br>
@@ -103,13 +104,31 @@
 </dl>
 
 
-<h4>Application:</h4>
+<h3>Application:</h3>
 
-<p>A good place to use the sets would be:</p>
+<p>A good place to use the sets would be to define a tool like this:</p>
 
-<p><b>zip.exe a "%tm.zip" $qsrAPF</b></p>
+<table cellspacing="15" border="0" >
+<tr>
+ <td><b>Command:</b></td>
+ <td>zip.exe</td>
+</tr>
+<tr>
+ <td><b>Arguments:</b></td>
+ <td>a "%tm.zip" $qrAPF</td>
+</tr>
+<tr>
+ <td><b>Initial Directory:</b></td>
+ <td>%dm</td>
+</tr>
+</table>
 
-<p>The Set of FileNames are always unique - no duplicates of a filename.</p>
+<p>This will lead to a ZIP-archive, where all your files regarding the project are gathered in. You need to have a compression program (like WinZip or WinRAR) for this and to adjust the path and arguments to this program.</p>
+
+
+<h3>Note:</h3>
+
+<p>These placeholders will not generate duplicates of a filename. So you can always be sure, that each filename will be issued only once.</p>
 
 </body>
 </html>
